# LogAnalysisAI

./: .env.example  .gitignore  README.md  app.js  index.html  pyproject.toml  requirements.txt  static-shim.js  styles.css
.claude/plans/: log-analysis-ai.plan.md
api/: main.py  routes.py  state.py
api/static/: app.js  index.html  styles.css
data/: README.md
docs/: LogAnalysisAI_Presentation.html  PRD_Defense_Proof.html  dataset_comparison.json  dataset_comparison.md  sweep_hdfs.json  sweep_sample.json
scripts/: compare_datasets.py  download_data.py  evaluate.py  make_defense_doc.py  make_presentation.py  sweep_candidates.py  train.py
src/loganalysis/: __init__.py  config.py  datasplit.py  persistence.py  pipeline.py  records.py
src/loganalysis/alerting/: alert.py  hitl.py
src/loganalysis/classification/: root_cause.py
src/loganalysis/detection/: base.py  deeplog.py  rule_based.py
src/loganalysis/features/: sequencer.py
src/loganalysis/feedback/: store.py
src/loganalysis/ingestion/: loader.py  stream.py  synthetic.py
src/loganalysis/metrics/: __init__.py  evaluation.py
src/loganalysis/parsing/: drain_parser.py
src/loganalysis/redaction/: redactor.py
src/loganalysis/scoring/: severity.py
src/loganalysis/summarize/: llm_summarizer.py  templates.py
tests/: test_alert_feedback.py  test_api.py  test_detection.py  test_drain_parser.py  test_evaluation.py  test_hitl.py  test_pipeline.py  test_redactor.py  test_sequencer.py  test_synthetic_and_stream.py
