[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loganalysis"
version = "0.1.0"
description = "Log Analysis AI — real-time log anomaly detection, root-cause classification, and LLM summarization"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Natpakan Kanthasorn" }]
dependencies = [
    "torch>=2.2",
    "drain3>=0.9.11",
    "scikit-learn>=1.3",
    "numpy>=1.26",
    "anthropic>=0.40",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "httpx>=0.27"]

[project.scripts]
loganalysis-train = "scripts.train:main"
loganalysis-eval = "scripts.evaluate:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["loganalysis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-q"
